Deactivate setting covers for unknown albums. They result in covers md5sumed over the artist only. Context browser doesn't display them reliable.

BUG: 127462
 

svn path=/trunk/extragear/multimedia/amarok/; revision=623397